--- a/BarbezDotEu.Http/BarbezDotEu.Http/BarbezDotEu.Http.csproj
+++ b/BarbezDotEu.Http/BarbezDotEu.Http/BarbezDotEu.Http.csproj
@@ -8,7 +8,7 @@
     <PackageId>BarbezDotEu.Http</PackageId>
     <Copyright>©2022 Hannes Barbez</Copyright>
     <Version>2.1.1</Version>
-    <Description>Contains additional generic logic related to HTTP and HTTPS, such as copying a request via the HttpRequestMessageCloner.</Description>
+    <Description>Additional generic logic related to HTTP and HTTPS, such as copying a request via the HttpRequestMessageCloner.</Description>
     <PackageTags>basic;http;request;cloner</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
